# coding_2022

./: .gitignore  README.md
1/101Quadtree/: index.html  quadtree.js  sketch.js
1/102DotFonts/: sketch.js  vehicle.js
1/105ImageUpload/: package-lock.json  package.json
1/106MongooseExample/: index.js  package.json
1/107MongooseImageUpload/: index.js  package-lock.json
1/108ImageGenBackend/: index.js  package-lock.json
1/109AntSim/: index.html  sketch.js
1/110PerlinNoiseTerrain/: sketch.js
1/111TensorFlow.js/: package.json
1/112LinearRegressionTensorFlow/: linear.js
1/113TensorFlowApi/: package-lock.json
1/114FaceBlur/: index.html  sketch.js
1/116TensorFlowSimplePrediction/: package-lock.json
1/117LoadingScreen/: sketch.js
1/118loadingscreenreact/: package-lock.json  package.json
1/120NodeOnoff/: package.json
1/121PrivacyCodeLogo/: sketch.js
1/122p53d/: sketch.js
1/124.1StackWave/: sketch.js
1/124.3Splash/: sketch.js
1/128Typescript/: example.ts
1/130Constellator/: sketch.js
April/413CryptoAPI/: index.js  package-lock.json  package.json
August/: README.md
August/802TypeScriptTesting/: app.test.ts  app.ts  filesystemInterface.ts  input.txt
August/807DenoPuppeteer/: deno.json  import_map.json  index.ts
August/811Nmap/: ifconfig.txt
February/2153dPlaytime/: sketch.js
February/216RoadMapping/: ReadMe.md
February/219VimPractice2/: index.js
February/220ProgressRepPostgre/: ReadMe.md
January/101Quadtree/: index.html
March/315TwitterStream/twitter_stream/: Cargo.toml
March/315TwitterStream/twitter_stream/src/: main.rs
(+212 files in other folders)
