[package]
name = "twitter_stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
twitter-stream = "0.13"
serde_json = "1.0.59"
serde = { version = "1.0", features = ["derive"] }
vader_sentiment = "0.1.1"